--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/script.js" type="module"></script>
+    <title> MeDR: Sammen om det vigtige </title>
 </head>
 <body>
     <h1> This is a test :) </h1>
