--- a/views/index.html
+++ b/views/index.html
@@ -10,13 +10,16 @@
 
     <!-- LOGIN-FORM -->
 
-    <section class="login">
-
+    <section id="loginForm" class="login">
         <form>
-            <input>
-            <button type="submit"> Login </button>
+            <label for="email">Email</label>
+            <input id="email" name="email" type="text" placeholder="Enter your email" required>
+    
+            <label for="password">Password</label>
+            <input id="password" name="password" type="password" placeholder="Enter your password" required>
+    
+            <button type="submit" id="loginSubmit">Login</button>
         </form>
-
     </section>
 
 
