Login and logout functions

--- a/views/index.html
+++ b/views/index.html
@@ -26,11 +26,10 @@
     <!-- APPLICATION STARTS HERE -->
 
     <section class="application">
-
-        <h1> Welcome </h1>
-        <h1> This is a test :) </h1>
-
+        <h1 id="welcomeUser">Welcome </h1> 
+        <button id="logoutBtn"> Logout </button>
     </section>
+
 
 
 </body>
