--- a/views/index.html
+++ b/views/index.html
@@ -26,8 +26,33 @@
     <!-- APPLICATION STARTS HERE -->
 
     <section class="application">
-        <h1 id="welcomeUser">Welcome </h1> 
-        <button id="logoutBtn"> Logout </button>
+
+        <!-- HEADER -->
+        <section class="welcome-user">
+            <h1 id="welcomeUser">Welcome </h1> 
+            <button id="logoutBtn"> Logout </button>
+        </section>
+
+        <br><br>
+
+        <!-- PROFILE -->
+        <section class="user-profile">
+            
+            <input id="checkTVA" type="checkbox"></input>
+            <label for="checkTVA"> TVA </label>
+
+            <br>
+
+            <input id="checkSport" type="checkbox"></input>
+            <label for="checkSport"> Sport </label>
+
+
+
+
+        </section>
+
+
+
     </section>
 
 
