User-Interest Server

--- a/views/index.html
+++ b/views/index.html
@@ -45,6 +45,9 @@
 
             <input id="checkSport" type="checkbox"></input>
             <label for="checkSport"> Sport </label>
+            
+            <input id="checkBagedyst" type="checkbox"></input>
+            <label for="checkBagedyst"> Sport </label>
 
 
 
@@ -62,5 +65,6 @@
 <!-- SCRIPTS FOR THE APPLICATION -->
     <script src="js/script.js" type="module" async></script>
     <script src="js/session.js" type="module" async></script>
+    <script src="js/interests.js" type="module" async></script>
 
 </html>
