--- a/views/index.html
+++ b/views/index.html
@@ -46,8 +46,10 @@
             <input id="checkSport" type="checkbox"></input>
             <label for="checkSport"> Sport </label>
             
+            <br>
+
             <input id="checkBagedyst" type="checkbox"></input>
-            <label for="checkBagedyst"> Sport </label>
+            <label for="checkBagedyst"> Den Store Bagedyst </label>
 
 
 
