Connecting user_interest with database and session

--- a/views/index.html
+++ b/views/index.html
@@ -37,24 +37,25 @@
 
         <!-- PROFILE -->
         <section class="user-profile">
-            
-            <input id="checkTVA" type="checkbox"></input>
+            <input id="checkTVA" type="checkbox" data-interest-id="">
             <label for="checkTVA"> TVA </label>
-
+        
             <br>
-
-            <input id="checkSport" type="checkbox"></input>
+        
+            <input id="checkSport" type="checkbox" data-interest-id="">
             <label for="checkSport"> Sport </label>
-            
+        
             <br>
-
-            <input id="checkBagedyst" type="checkbox"></input>
+        
+            <input id="checkBagedyst" type="checkbox" data-interest-id="1">
             <label for="checkBagedyst"> Den Store Bagedyst </label>
-
-
-
-
+        
+            <br>
+        
+            <input id="checkKenderTypen" type="checkbox" data-interest-id="3">
+            <label for="checkKenderTypen"> Kender du typen </label>
         </section>
+        
 
 
 
