Matches based on same interests

--- a/views/index.html
+++ b/views/index.html
@@ -55,6 +55,16 @@
             <input id="checkKenderTypen" type="checkbox" data-interest-id="3">
             <label for="checkKenderTypen"> Kender du typen </label>
         </section>
+
+        <br><br>
+
+        <!-- Matching Users -->
+        <section class="matching-users">
+
+            <h1> Explore Matches </h1>
+            <p id="exploreMatches"> </p>
+
+        </section>
         
 
 
@@ -69,5 +79,6 @@
     <script src="js/script.js" type="module" async></script>
     <script src="js/session.js" type="module" async></script>
     <script src="js/interests.js" type="module" async></script>
+    <script src="js/matches.js" type="module" async></script>
 
 </html>
