--- a/views/index.html
+++ b/views/index.html
@@ -37,23 +37,47 @@
 
         <!-- PROFILE -->
         <section class="user-profile">
-            <input id="checkTVA" type="checkbox" data-interest-id="">
-            <label for="checkTVA"> TVA </label>
-        
-            <br>
-        
-            <input id="checkSport" type="checkbox" data-interest-id="">
-            <label for="checkSport"> Sport </label>
-        
-            <br>
-        
-            <input id="checkBagedyst" type="checkbox" data-interest-id="1">
-            <label for="checkBagedyst"> Den Store Bagedyst </label>
-        
-            <br>
-        
-            <input id="checkKenderTypen" type="checkbox" data-interest-id="3">
-            <label for="checkKenderTypen"> Kender du typen </label>
+
+            <!-- PROFILE INFO -->
+            <div class="user-profile-info">
+
+                <h1> Min Profil </h1>
+                
+                <span for="userProfileUserName"> Brugernavn: </span> <span id="userProfileUserName"> </span> <br>
+
+                <span for="userProfileName"> Navn: </span> <span id="userProfileName"> </span> <br>
+
+                <span for="userProfileEmail"> Email: </span> <span id="userProfileEmail"> </span> <br>
+
+                <span for="userProfilePassword"> Password: </span> <span id="userProfilePassword"> </span>
+
+            </div>
+
+
+            <!-- MY INTERESTS -->
+            <div class="user-profile-interest">
+
+                <h1> Mine Interesser </h1>
+
+                <input id="checkTVA" type="checkbox" data-interest-id="">
+                <label for="checkTVA"> TVA </label>
+            
+                <br>
+            
+                <input id="checkSport" type="checkbox" data-interest-id="">
+                <label for="checkSport"> Sport </label>
+            
+                <br>
+            
+                <input id="checkBagedyst" type="checkbox" data-interest-id="1">
+                <label for="checkBagedyst"> Den Store Bagedyst </label>
+            
+                <br>
+            
+                <input id="checkKenderTypen" type="checkbox" data-interest-id="3">
+                <label for="checkKenderTypen"> Kender du typen </label>
+            </div>
+
         </section>
 
         <br><br>
@@ -80,5 +104,6 @@
     <script src="js/session.js" type="module" async></script>
     <script src="js/interests.js" type="module" async></script>
     <script src="js/matches.js" type="module" async></script>
+    <script src="js/profile.js" type="module" async></script>
 
 </html>
