Chat-function-try

--- a/views/index.html
+++ b/views/index.html
@@ -105,5 +105,6 @@
     <script src="js/interests.js" type="module" async></script>
     <script src="js/matches.js" type="module" async></script>
     <script src="js/profile.js" type="module" async></script>
+    <script src="js/chats.js" type="module" async></script>
 
 </html>
