--- a/views/index.html
+++ b/views/index.html
@@ -59,13 +59,13 @@
 
                 <h1> Mine Interesser </h1>
 
-                <input id="checkTVA" type="checkbox" data-interest-id="">
+                <input id="checkTVA" type="checkbox" data-interest-id="4">
                 <label for="checkTVA"> TVA </label>
             
                 <br>
             
-                <input id="checkSport" type="checkbox" data-interest-id="">
-                <label for="checkSport"> Sport </label>
+                <input id="checkSport" type="checkbox" data-interest-id="6">
+                <label for="checkSport"> Sara og Monopolet </label>
             
                 <br>
             
