--- a/views/index.html
+++ b/views/index.html
@@ -89,6 +89,14 @@
             <p id="exploreMatches"> </p>
 
         </section>
+
+        <!-- My Matches/Chats  -->
+        <section class="matching-users">
+
+            <h1> Mine Chats </h1>
+            <div id="chat-result"></div>
+
+        </section>
         
 
 
