Mongo DB connection and routes changes

--- a/views/index.html
+++ b/views/index.html
@@ -97,6 +97,14 @@
             <div id="chat-result"></div>
 
         </section>
+
+        <!-- Notifications  -->
+        <section class="log-notifications">
+
+            <h1> Notifications </h1>
+            <div id="logNotifications"></div>
+
+        </section>
         
 
 
@@ -114,5 +122,6 @@
     <script src="js/matches.js" type="module" async></script>
     <script src="js/profile.js" type="module" async></script>
     <script src="js/chats.js" type="module" async></script>
+    <script src="js/notifications.js" type="module" async></script>
 
 </html>
