Display User-info

--- a/views/index.html
+++ b/views/index.html
@@ -87,6 +87,7 @@
 
             <h1> Explore Matches </h1>
             <p id="exploreMatches"> </p>
+            <div id="userInfoSection"></div>
 
         </section>
 
