--- a/views/index.html
+++ b/views/index.html
@@ -91,6 +91,8 @@
 
         </section>
 
+        <br><br>
+
         <!-- My Matches/Chats  -->
         <section class="matching-users">
 
@@ -99,6 +101,8 @@
 
         </section>
 
+        <br><br>
+
         <!-- Notifications  -->
         <section class="log-notifications">
 
@@ -106,6 +110,19 @@
             <div id="logNotifications"></div>
 
         </section>
+
+        <br><br>
+
+        <!-- Icebreaker  -->
+        <section class="icebreaker">
+
+            <h1> Icebreaker </h1>
+            <div id="icebreaker"></div>
+            <button id="shuffleIcebreaker"> Shuffle </button>
+
+        </section>
+
+        <br><br>
         
 
 
@@ -123,6 +140,7 @@
     <script src="js/matches.js" type="module" async></script>
     <script src="js/profile.js" type="module" async></script>
     <script src="js/chats.js" type="module" async></script>
+    <script src="js/messages.js" type="module" async></script>
     <script src="js/notifications.js" type="module" async></script>
 
 </html>
