Display messages based on chat_id

--- a/views/index.html
+++ b/views/index.html
@@ -98,6 +98,7 @@
 
             <h1> Mine Chats </h1>
             <div id="chat-result"></div>
+            <div id="message-timeline"></div>
             <div id="message-input"></div>
 
         </section>
