--- a/views/index.html
+++ b/views/index.html
@@ -35,50 +35,45 @@
 
         <br><br>
 
-        <!-- PROFILE -->
         <section class="user-profile">
-
             <!-- PROFILE INFO -->
             <div class="user-profile-info">
-
                 <h1> Min Profil </h1>
                 
                 <span for="userProfileUserName"> Brugernavn: </span> <span id="userProfileUserName"> </span> <br>
-
                 <span for="userProfileName"> Navn: </span> <span id="userProfileName"> </span> <br>
-
                 <span for="userProfileEmail"> Email: </span> <span id="userProfileEmail"> </span> <br>
-
                 <span for="userProfilePassword"> Password: </span> <span id="userProfilePassword"> </span>
-
             </div>
-
-
+        
             <!-- MY INTERESTS -->
             <div class="user-profile-interest">
-
                 <h1> Mine Interesser </h1>
-
-                <input id="checkTVA" type="checkbox" data-interest-id="4">
-                <label for="checkTVA"> TVA </label>
-            
-                <br>
-            
-                <input id="checkSport" type="checkbox" data-interest-id="6">
-                <label for="checkSport"> Sara og Monopolet </label>
-            
-                <br>
-            
-                <input id="checkBagedyst" type="checkbox" data-interest-id="1">
-                <label for="checkBagedyst"> Den Store Bagedyst </label>
-            
-                <br>
-            
-                <input id="checkKenderTypen" type="checkbox" data-interest-id="3">
-                <label for="checkKenderTypen"> Kender du typen </label>
+                
+                <!-- Wrap checkboxes in a form -->
+                <form id="interestForm">
+                    <input id="checkTVA" type="checkbox" data-interest-id="4">
+                    <label for="checkTVA"> TVA </label>
+                    <br>
+                    
+                    <input id="checkSport" type="checkbox" data-interest-id="6">
+                    <label for="checkSport"> Sara og Monopolet </label>
+                    <br>
+                    
+                    <input id="checkBagedyst" type="checkbox" data-interest-id="1">
+                    <label for="checkBagedyst"> Den Store Bagedyst </label>
+                    <br>
+                    
+                    <input id="checkKenderTypen" type="checkbox" data-interest-id="3">
+                    <label for="checkKenderTypen"> Kender du typen </label>
+                    <br>
+                    
+                    <!-- Submit Button -->
+                    <button type="submit">Submit Changes</button>
+                </form>
             </div>
-
         </section>
+        
 
         <br><br>
 
