--- a/views/css/style.css
+++ b/views/css/style.css
@@ -1,11 +1,45 @@
+/* /////////////////////////////////////////////////////////////////////////// */
+/* COLOR PALETTE */
+:root {
+
+    /* Basic Colors */
+    --colorBackground:      rgb(255,255,255);
+    --colorLightText:       rgb(255,255,255);
+    --colorGreyLight:       rgb(160, 160, 160);
+    --colorGreyDark:        rgb(90, 90, 90);
+    --colorDarkText:        rgb(0,0,0);
+    
+    /* DR P5 - colorpalette */
+    --colorRed:             rgb(230,105,90);
+    --colorYellow:          rgb(245,195,90);
+    --colorGreen:           rgb(140,200,180);
+    --colorBlue:            rgb(0,75,100);
+    
+    /* Contrast Shades */
+    --colorShadeLight:      rgb(245,240,235);
+    --colorShadeDark:       rgb(45,40,45);
+    --colorShadeRed:        rgb(184, 84, 72);
+    --colorShadeYellow:     rgb(196, 156, 72);
+    --colorShadeGreen:      rgb(112, 160, 144);
+    --colorShadeBlue:       rgb(0, 60, 80);
+
+}
+
+/* /////////////////////////////////////////////////////////////////////////// */
+/* OVERALL STYLING */
+
 * {
-    background-color: rgb(225, 225, 225);
+    margin: 0;
+}
+
+.body {
+    background-color: var(--colorBackground);
 }
 
 /* /////////////////////////////////////////////////////////////////////////// */
 /* LOGIN SECTION */
 .login {
-    display: block;
+    
 }
 
 /* /////////////////////////////////////////////////////////////////////////// */
