--- a/views/index.html
+++ b/views/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
     <link rel="stylesheet" href="css/style.css">
     <title> MeDR: Sammen om det vigtige </title>
 </head>
-<body>
+<body style="font-family: Open Sans;">
 
     <!-- LOGIN-FORM -->
 
