--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title> MeDR: Sammen om det vigtige </title>
 </head>
@@ -12,15 +12,26 @@
     <!-- LOGIN-FORM -->
 
     <section id="loginForm" class="login">
-        <form>
-            <label for="email">Email</label>
-            <input id="email" name="email" type="text" placeholder="Enter your email" required>
-    
-            <label for="password">Password</label>
-            <input id="password" name="password" type="password" placeholder="Enter your password" required>
-    
-            <button type="submit" id="loginSubmit">Login</button>
-        </form>
+        
+        <div class="login-container"> 
+            <img src="img/medr-logo.png" alt="logo">
+            <h1> MeDR </h1>
+            <p> Sammen om det vigtige </p>
+
+            <form class="login-form">
+                <label for="email">E-mail</label> <br>
+                <input id="email" name="email" type="text" placeholder="Skriv din e-mail" required>
+        
+                <br><br>
+
+                <label for="password">Kodeord</label> <br>
+                <input id="password" name="password" type="password" placeholder="Skriv dit kodeord" required>
+        
+                <br> 
+
+                <button type="submit" id="loginSubmit"> LOG IND </button>
+            </form>
+        </div>
     </section>
 
 
