--- a/views/index.html
+++ b/views/index.html
@@ -9,6 +9,12 @@
 </head>
 <body style="font-family: Open Sans;">
 
+
+    <section class="desktop-error">
+        <h1> Error :) </h1>
+    </section>
+
+
     <!-- LOGIN-FORM -->
 
     <section id="loginForm" class="login">
