Desktop Error styling

--- a/views/index.html
+++ b/views/index.html
@@ -11,7 +11,8 @@
 
 
     <section class="desktop-error">
-        <h1> Error :) </h1>
+        <img src="img/medr-logo.png" alt="logo">
+        <h1> Dette website er <strong> KUN </strong> tilgængeligt på smartphone </h1>
     </section>
 
 
