--- a/views/css/style.css
+++ b/views/css/style.css
@@ -38,8 +38,28 @@
     background-color: var(--colorBackground);
 }
 
+/* /////////////////////////////////////////////////////////////////////////// */
+/* ERROR SECTION */
+
 .desktop-error {
     display: none;
+    padding: 2rem;
+    padding-top: 10rem;
+    background: linear-gradient(to top, var(--colorShadeRed), var(--colorRed));
+    height: 100vh;
+    text-align: center;
+}
+
+.desktop-error h1 {
+    margin-top: 1rem;
+    color: var(--colorLightText);
+    font-size: 30px;
+    font-weight: 100;
+}
+
+.desktop-error img {
+    /* width: 10%; */
+    width: 9rem;
 }
 
 /* /////////////////////////////////////////////////////////////////////////// */
