--- a/views/index.html
+++ b/views/index.html
@@ -121,9 +121,13 @@
         <br><br>
 
         <!-- Matching Users -->
-        <section class="matching-users">
+        <section class="explore-matches">
 
-            <h1> Explore Matches </h1>
+            <div class="section-header">
+                <h1> Udforsk matches </h1>
+                <h1> > </h1> <!-- replace with icon-image  -->
+            </div>
+
             <p id="exploreMatches"> </p>
             <div id="userInfoSection"></div>
 
