--- a/views/index.html
+++ b/views/index.html
@@ -117,6 +117,17 @@
             </div>
         </section>        
         
+        <!-- Notifications  -->
+        <section class="log-notifications">
+
+            <div class="section-header">
+                <h1> Seneste opdateringer </h1>
+                <h1> > </h1> <!-- replace with icon-image  -->
+            </div>
+
+            <div id="logNotifications"></div>
+
+        </section>
 
         <br><br>
 
@@ -142,16 +153,6 @@
             <div id="chat-result"></div>
             <div id="message-timeline"></div>
             <div id="message-input"></div>
-
-        </section>
-
-        <br><br>
-
-        <!-- Notifications  -->
-        <section class="log-notifications">
-
-            <h1> Notifications </h1>
-            <div id="logNotifications"></div>
 
         </section>
 
