--- a/views/css/style.css
+++ b/views/css/style.css
@@ -158,9 +158,8 @@
     z-index: 10;
     position: fixed;
     display: grid;
-    /* gap: 1rem; */
     grid-template-columns: 1fr 5fr;
-    /* grid-template-rows: 1fr 1fr; */
+    box-shadow: 0px 10px 6px rgba(0, 0, 0, 0.2);
 }
 
 .header img {
