--- a/views/css/style.css
+++ b/views/css/style.css
@@ -235,7 +235,8 @@
 }
 
 .log-notifications h1 {
-    margin-top: 20px;
+    margin-top: 10px;
+    margin-bottom: -10px;
     color: var(--colorLightText);
 }
 
@@ -244,7 +245,7 @@
     display: flex; 
     flex-direction: row; 
     overflow-x: auto; 
-    /* gap: 2rem;  */
+    scrollbar-width: none;
 }
 
 .notiDetails {
@@ -268,14 +269,16 @@
     width: 20rem; /* Frame width for each notification */
     min-width: 20rem; /* Ensures consistency when scrolling */
     overflow: hidden; /* Prevent overflow of content */
+    font-size: 14px;
 }
 
 .notification p {
-    margin: 0.5rem 0; /* Spacing between text lines */
     word-wrap: break-word; /* Force long words to wrap */
 }
 
 .chat-button {
+    margin-top: 5px;
+    margin-bottom: 5px;
     background-color: var(--colorRed);
     border: none;
     color: var(--colorLightText);
@@ -284,7 +287,7 @@
 
 .timeline-container {
     margin-top: 0.5rem;
-    height: 1rem;
+    height: 0.5rem;
     position: relative;
     display: flex;
     justify-content: center;
