fetch interests to overview

--- a/views/index.html
+++ b/views/index.html
@@ -146,6 +146,25 @@
 
         <br><br>
 
+
+        <!-- INTERESTS OVERVIEW -->
+        <section class="interests-overview">
+
+            <div class="interests-overview-header">
+                <div class="section-header">
+                    <h1> Dine matches er baseret på </h1>
+                    <!-- <h1> > </h1> replace with icon-image  -->
+                </div>
+                <button> ✎ Ændre </button>
+            </div>
+
+            <div id="matchingInterestsContainer"></div>
+
+        </section>
+
+
+
+
         <!-- My Matches/Chats  -->
         <section class="matching-users">
 
