--- a/views/css/style.css
+++ b/views/css/style.css
@@ -225,6 +225,18 @@
 
 
 /* /////////////////////////////////////////////////////////////////////////// */
+/* CHATS */
+.matching-users {
+    display: none;
+}
+
+.icebreaker {
+    display: none;
+}
+
+
+
+/* /////////////////////////////////////////////////////////////////////////// */
 /* NOTIFICATIONS */
 
 .log-notifications {
@@ -324,9 +336,6 @@
 }
 
 
-
-
-
 /* /////////////////////////////////////////////////////////////////////////// */
 /* EXPLORE MATCHES */
 
@@ -377,6 +386,30 @@
     width: 50%;
 }
 
+
+/* /////////////////////////////////////////////////////////////////////////// */
+/* INTERESTS OVERVIEW */
+
+.interests-overview {
+    background-color: var(--colorShadeLight);
+    margin-left: -1rem;
+    padding: 1rem;
+    padding-top: 2rem;
+}
+
+.interests-overview-header {
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    gap: 2rem;
+}
+
+.interests-overview-header button {
+    color: var(--colorRed);
+    border: none;
+    padding: 0;
+    margin-top: -1rem;
+}
 
 
 
