Profile and overlay

--- a/views/css/style.css
+++ b/views/css/style.css
@@ -40,6 +40,36 @@
 }
 
 /* /////////////////////////////////////////////////////////////////////////// */
+/* OVERLAY */
+
+.overlay {
+    position: fixed; /* Makes it a child of the overlay */
+    top: 10%;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: var(--colorLightText);
+    padding: 2rem;
+    width: 100vw; /* Adjust width as per your needs */
+    height: 100vh;
+    z-index: 3; /* Ensure the profile content is above the overlay */
+}
+
+.overlay-header {
+    background-color: var(--colorBlue);
+}
+
+.overlay-close {
+    position: absolute;
+    background-color: var(--colorBackground);
+    border: none;
+    top: 0;
+    left: 0;
+    margin-top: 2rem;
+    margin-left: 1rem;
+    font-size: 14px;
+}
+
+/* /////////////////////////////////////////////////////////////////////////// */
 /* ERROR SECTION */
 
 .desktop-error {
@@ -56,6 +86,7 @@
     color: var(--colorLightText);
     font-size: 30px;
     font-weight: 100;
+    line-height: 2.5rem;
 }
 
 .desktop-error img {
@@ -219,9 +250,60 @@
 
 /* /////////////////////////////////////////////////////////////////////////// */
 /* USER PROFILE */
-.user-profile {
+
+#profileClose {
+    position: absolute;
+    background-color: var(--colorBackground);
+    border: none;
+    top: 0;
+    left: 0;
+    margin-top: 2rem;
+    margin-left: 1rem;
+    font-size: 14px;
+}
+
+#profileOverlay {
     display: none;
 }
+
+.user-profile {
+    position: fixed; /* Makes it a child of the overlay */
+    top: 10%;
+    left: 0;
+    background-color: var(--colorBackground);
+    color: var(--colorDarkText);
+    padding-top: 3rem;
+    padding: 2rem;
+    width: 50vh;
+    z-index: 5; /* Ensure the profile content is above the overlay */
+}
+
+
+/* HEADER STYLING */
+.header {
+    height: 10vh;
+    margin-left: -1rem;
+    padding-top: 1rem;
+    background-color: var(--colorRed);
+    z-index: 10; /* Ensures header stays on top */
+    position: fixed;
+    display: grid;
+    grid-template-columns: 1fr 5fr;
+    box-shadow: 0px 10px 6px rgba(0, 0, 0, 0.2);
+}
+
+/* Optional: Style for closing the profile overlay (e.g., a close button) */
+.user-profile-overlay .close-btn {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    background: transparent;
+    border: none;
+    color: var(--colorLightText);
+    font-size: 1.5rem;
+    cursor: pointer;
+}
+
 
 
 /* /////////////////////////////////////////////////////////////////////////// */
