--- a/views/index.html
+++ b/views/index.html
@@ -83,13 +83,12 @@
         <br><br><br><br><br>
 
 
-        <div class="overlay">
+        <!-- <div class="overlay">
             <div class="overlay-header">
-                <button class="overlay-close"> < </button> <!-- replace with icon-image  -->
+                <button class="overlay-close"> < </button> 
                 <h1 class="overlay-h1"> Header </h1>
             </div>
-
-        </div>
+        </div> -->
 
 
 
@@ -100,7 +99,10 @@
         <div id="profileOverlay" class="overlay">
             <section id="userProfileSection" class="user-profile">
                 <!-- PROFILE INFO -->
-                <button id="profileClose"> X </button>
+                <div class="overlay-header">
+                    <button id="profileClose" class="overlay-close"> < </button> <!-- replace with icon-image  -->
+                    <h1 class="overlay-h1"> Profil </h1>
+                </div>
 
                 <div class="user-profile-info">
                     <h1> Min Profil </h1>
