--- a/views/index.html
+++ b/views/index.html
@@ -27,7 +27,7 @@
             
             <form class="login-form">
                 <label for="email">E-mail</label> <br>
-                <input id="email" name="email" type="text" placeholder="Skriv din e-mail" required>
+                <input id="email" name="email" type="text" data-validate="email" placeholder="Skriv din e-mail" required>
                 
                 <br><br>
                 
